Fix overflow issues and add animation when hovering images

--- a/css/main.css
+++ b/css/main.css
@@ -131,12 +131,13 @@ footer a {
 .description {
   color: rgb(0, 0, 0);
   font-family: "Abel", sans-serif;
-  font-size: 3vh;
+  font-size: 1.5rem;
   font-weight: 600;
   position: relative;
   text-align: center;
   align-content: center;
-  top: -180px;
+  padding: 0 10px;
+  top: -280px;
 }
 
 .button-card {
@@ -149,10 +150,12 @@ footer a {
 .column:hover img {
   backface-visibility: hidden;
   opacity: 0.2;
+  transition: 0.3s;
 }
 
 .column:hover .text {
   opacity: 1;
+  transition: 0.3s;
 }
 
 .column img {
